<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmOrder"
    android:orientation="vertical"
    android:paddingHorizontal="50dp"
    android:background="@color/colorFondo">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirmation"
        android:textSize="22sp"
        android:textColor="@color/deepGrey"
        android:gravity="center"
        android:layout_marginTop="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:paddingHorizontal="5dp"
        android:background="@drawable/boton_redondo_blanco">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/list_orden"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:src="@drawable/line"
            android:layout_marginVertical="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:textColor="@color/deepGrey"
                android:textSize="18sp"
                android:text="@string/total"/>

            <TextView
                android:id="@+id/precioTotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="$150"
                android:fontFamily="monospace"
                android:textColor="@color/deepGrey"
                android:textSize="18sp"
                android:textDirection="rtl"
                android:layout_marginBottom="15dp"
                />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:fontFamily="monospace"
            android:text="@string/consumidor"
            android:textColor="@color/deepGrey"
            android:layout_weight="1"
            />
        
        <EditText
            android:id="@+id/edit_consumidor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/defaultText"
            android:textSize="18sp"
            android:text=""
            android:textAlignment="center"
            android:layout_weight="1"
            android:background="@drawable/boton_redondo_blanco"/>

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="25dp"
        android:layout_marginTop="45dp">
        
        <Button
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:id="@+id/btn_enviarorden"
            android:textSize="11sp"
            android:background="@drawable/round_button_green"
            android:textColor="@color/defaultText"
            android:text="@string/enviarOrden"
            android:layout_marginRight="25dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btn_editarorden"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:textSize="11sp"
            android:background="@drawable/round_button_green"
            android:backgroundTint="@color/amarilloBoton"
            android:textColor="@color/defaultText"
            android:text="@string/editarOrden"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="55dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/menuBtn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textSize="11sp"
                android:textColor="@color/defaultText"
                android:layout_marginLeft="20dp"
                android:background="@drawable/ic_arrow_back_black_24dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:fontFamily="monospace"
                android:textColor="@color/deepGrey"
                android:text="@string/volverMenu"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="120dp">

            <Button
                android:id="@+id/cancelBtn"
                android:layout_width="50dp"
                android:layout_height="50dp"

                android:layout_marginLeft="20dp"
                android:background="@drawable/cancel_vector"
                android:textColor="@color/defaultText"
                android:textSize="11sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:gravity="end"
                android:textAlignment="textEnd"
                android:textColor="@color/deepGrey"
                android:fontFamily="monospace"

                android:text="@string/cancelarOrden"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>